// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation Item snapshot with RUNNING correctly 1`] = `
<nav
  aria-label="Global"
  className="pf-v6-c-nav"
  data-ouia-component-id="OUIA-Generated-Nav-2"
  data-ouia-component-type="PF6/Nav"
  data-ouia-safe={true}
>
  <li
    className="pf-v6-c-nav__item navItem"
    data-ouia-component-id="OUIA-Generated-NavItem-2"
    data-ouia-component-type="PF6/NavItem"
    data-ouia-safe={true}
    onMouseOver={[Function]}
  >
    <a
      aria-current={null}
      className="pf-v6-c-nav__link navItem"
      data-testid="/namespace/workspace"
      id="/namespace/workspace"
      onClick={[Function]}
      tabIndex={null}
    >
      <span
        className="pf-v6-c-nav__link-text"
      >
        <span
          data-testid="recent-workspace-item"
        >
          <div>
            Mock Workspace status indicator, status: 
            Stopped
          </div>
          <span
            className="titleHover "
          >
            workspace
          </span>
        </span>
        <div>
          RecentItemWorkspaceActions
        </div>
      </span>
    </a>
  </li>
</nav>
`;

exports[`Navigation Item snapshot with STOPPED status 1`] = `
<nav
  aria-label="Global"
  className="pf-v6-c-nav"
  data-ouia-component-id="OUIA-Generated-Nav-1"
  data-ouia-component-type="PF6/Nav"
  data-ouia-safe={true}
>
  <li
    className="pf-v6-c-nav__item navItem"
    data-ouia-component-id="OUIA-Generated-NavItem-1"
    data-ouia-component-type="PF6/NavItem"
    data-ouia-safe={true}
    onMouseOver={[Function]}
  >
    <a
      aria-current={null}
      className="pf-v6-c-nav__link navItem"
      data-testid="/namespace/workspace"
      id="/namespace/workspace"
      onClick={[Function]}
      tabIndex={null}
    >
      <span
        className="pf-v6-c-nav__link-text"
      >
        <span
          data-testid="recent-workspace-item"
        >
          <div>
            Mock Workspace status indicator, status: 
            Stopped
          </div>
          <span
            className="titleHover "
          >
            workspace
          </span>
        </span>
        <div>
          RecentItemWorkspaceActions
        </div>
      </span>
    </a>
  </li>
</nav>
`;
